force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/Inbound_Call_Monthly_Agent__c.object-meta.xml
<CustomObject>
    <label>Inbound Call Agent</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Call Agent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>