force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/AHT__c.field-meta.xml
<CustomField>
    <fullName>AHT__c</fullName>
    <defaultValue>&apos;00:00:00&apos;</defaultValue>
    <label>AHT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>