force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/AHT_Second2__c.field-meta.xml
<CustomField>
    <fullName>AHT_Second2__c</fullName>
    <formula>VALUE(LEFT(AHT__c,2))*60*60 + VALUE(LEFT(RIGHT(AHT__c,5),2))*60 + VALUE(RIGHT(AHT__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT Second2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>