force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/AHT_Second__c.field-meta.xml
<CustomField>
    <fullName>AHT_Second__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AHT Second</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>