force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 2</label>
    <type>Date</type>
</CustomField>