force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/SIP__c.field-meta.xml
<CustomField>
    <fullName>SIP__c</fullName>
    <label>SIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>