force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/SIP_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>SIP_Agent_Name__c</fullName>
    <formula>SIP__c &amp; &quot; - &quot; &amp; Agent_Name__r.FirstName &amp; &quot; &quot; &amp; Agent_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIP - Agent Name</label>
    <type>Text</type>
</CustomField>