force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/Total_Available_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Available Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>