force-app/main/default/objects/Inbound_Call_Monthly_Agent__c/fields/Total_Time_Staffed__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Staffed__c</fullName>
    <formula>IF(Total_Time_Staffed_Seconds__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(Total_Time_Staffed_Seconds__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(Total_Time_Staffed_Seconds__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(Total_Time_Staffed_Seconds__c,3600)/60)) + &quot;:&quot; + IF(MOD(MOD(Total_Time_Staffed_Seconds__c,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(Total_Time_Staffed_Seconds__c,3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Staffed</label>
    <type>Text</type>
</CustomField>